HSEARCH-4222 Remove unnecessary net.bytebuddy.experimental for JDK 16->18