@@ -2359,12 +2359,6 @@
                 </property>
             </activation>
             <properties>
-                <!-- We need net.bytebuddy.experimental=true to make BytecodeEnhancementIT and mockito-based tests pass -->
-                <surefire.jvm.args.java-version>
-                    -Djdk.attach.allowAttachSelf=true
-                    -Dnet.bytebuddy.experimental=true
-                    --illegal-access=deny
-                </surefire.jvm.args.java-version>
                 <!-- Spring isn't ready for JDK16 yet -->
                 <failsafe.spring.skip>true</failsafe.spring.skip>
             </properties>
@@ -2379,11 +2373,6 @@
                 </property>
             </activation>
             <properties>
-                <!-- We need net.bytebuddy.experimental=true to make BytecodeEnhancementIT and mockito-based tests pass -->
-                <surefire.jvm.args.java-version>
-                    -Djdk.attach.allowAttachSelf=true
-                    -Dnet.bytebuddy.experimental=true
-                </surefire.jvm.args.java-version>
                 <!-- Spring isn't ready for JDK17 yet -->
                 <failsafe.spring.skip>true</failsafe.spring.skip>
             </properties>
@@ -2400,11 +2389,6 @@
             <properties>
                 <!-- ForbiddenAPIs doesn't provide bundled signatures for JDK18 yet. -->
                 <forbiddenapis.skip>true</forbiddenapis.skip>
-                <!-- We need net.bytebuddy.experimental=true to make BytecodeEnhancementIT and mockito-based tests pass -->
-                <surefire.jvm.args.java-version>
-                    -Djdk.attach.allowAttachSelf=true
-                    -Dnet.bytebuddy.experimental=true
-                </surefire.jvm.args.java-version>
                 <!-- Spring isn't ready for JDK18 yet -->
                 <failsafe.spring.skip>true</failsafe.spring.skip>
             </properties>
